// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infobar actions execute action fail 1`] = `
Array [
  Object {
    "callback": [Function],
    "data": Object {
      "action_name": "shopifyRefundShippingCostOfOrder",
      "integration_id": 5,
      "payload": Object {
        "order_id": 4194477515,
      },
      "ticket_id": 1,
      "user_id": 34,
    },
    "type": "EXECUTE_ACTION_START",
  },
  Object {
    "data": Object {
      "action_name": "shopifyRefundShippingCostOfOrder",
      "integration_id": 5,
      "payload": Object {
        "order_id": 4194477515,
      },
      "ticket_id": 1,
      "user_id": 34,
    },
    "error": [Error: Request failed with status code 400],
    "reason": "Failed to execute action shopifyRefundShippingCostOfOrder on user 34 for integration 5",
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions execute action success 1`] = `
Array [
  Object {
    "callback": [Function],
    "data": Object {
      "action_name": "shopifyRefundShippingCostOfOrder",
      "integration_id": 5,
      "payload": Object {
        "order_id": 4194477515,
      },
      "ticket_id": 1,
      "user_id": 34,
    },
    "type": "EXECUTE_ACTION_START",
  },
]
`;

exports[`infobar actions handle executed action display error 1`] = `
Array [
  Object {
    "buttons": Array [
      Object {
        "name": "Review",
        "onClick": [Function],
        "primary": true,
      },
    ],
    "dismissAfter": 0,
    "message": "No way",
    "status": "error",
    "title": "Something went wrong on your last action 😞",
    "type": "NOTIFY-MOCK",
  },
  Object {
    "data": Object {
      "msg": "[SHOPIFY] [full-refund] No way",
      "status": "error",
    },
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions handle executed action display error from ticket currently on 1`] = `
Array [
  Object {
    "buttons": Array [],
    "dismissAfter": 0,
    "message": "No way",
    "status": "error",
    "title": "Something went wrong on your last action 😞",
    "type": "NOTIFY-MOCK",
  },
  Object {
    "data": Object {
      "msg": "[SHOPIFY] [full-refund] No way",
      "status": "error",
      "ticket_id": 1,
    },
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions handle executed action display error from ticket not currently on 1`] = `
Array [
  Object {
    "buttons": Array [
      Object {
        "name": "Review",
        "onClick": [Function],
        "primary": true,
      },
    ],
    "dismissAfter": 0,
    "message": "No way",
    "status": "error",
    "title": "Something went wrong on your last action 😞",
    "type": "NOTIFY-MOCK",
  },
  Object {
    "data": Object {
      "msg": "[SHOPIFY] [full-refund] No way",
      "status": "error",
      "ticket_id": 2,
    },
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions handle executed action success 1`] = `
Array [
  Object {
    "data": Object {
      "status": "success",
    },
    "type": "EXECUTE_ACTION_SUCCESS",
  },
]
`;

exports[`infobar actions search 1`] = `
Array [
  Object {
    "type": "SEARCH_USERS_START",
  },
  Object {
    "resp": Object {
      "data": Array [
        Object {
          "id": 1,
          "name": "alex",
        },
      ],
    },
    "type": "SEARCH_USERS_SUCCESS",
  },
]
`;

exports[`infobar actions similar user 1`] = `
Array [
  Object {
    "type": "SEARCH_SIMILAR_USER_START",
  },
  Object {
    "error": [Error: Request failed with status code 404],
    "reason": "Failed to do the search similar users. Please try again...",
    "type": "SEARCH_SIMILAR_USER_ERROR",
  },
]
`;
